<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/atop"
        android:text="@string/ADD"
        android:textColor="@color/brown"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft" />
    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/atop"
        android:text="@string/name"
        android:textColor="@color/brown"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/titleTV"
        app:layout_constraintTop_toBottomOf="@id/titleTV" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/bg"
        android:textSize="30sp"
        android:fontFamily="@font/atop"
        android:textColor="@color/light_brown"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/nameTV" />

    <View
        android:id="@+id/nameUnderline"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="@id/nameET"
        app:layout_constraintStart_toStartOf="@id/nameET"
        app:layout_constraintTop_toBottomOf="@id/nameET"/>

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/atop"
        android:text="@string/phone"
        android:textColor="@color/brown"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/nameUnderline"
        app:layout_constraintStart_toStartOf="@+id/nameTV" />

    <EditText
        android:id="@+id/numberET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/bg"
        android:fontFamily="@font/atop"
        android:gravity="center"
        android:inputType="phone"
        android:textColor="@color/light_brown"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/phoneTV"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"/>

    <View
        android:id="@+id/numberUnderline"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/numberET"
        app:layout_constraintStart_toStartOf="@id/nameUnderline"
        app:layout_constraintEnd_toEndOf="@id/nameUnderline"/>

    <Button
        android:id="@+id/closeBT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/close"
        android:textColor="@color/bg"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/numberUnderline"
        app:layout_constraintEnd_toStartOf="@id/editBT"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        android:layout_marginHorizontal="5dp"/>

    <Button
        android:id="@+id/editBT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:layout_marginHorizontal="5dp"
        android:textColor="@color/bg"
        app:layout_constraintStart_toEndOf="@id/closeBT"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/closeBT"
        android:text="@string/action_add"/>


</androidx.constraintlayout.widget.ConstraintLayout>

